# esp32-edge-energy-measurement

./: .gitignore  NOTES.md  README.md
ansible-scripts/: README.md
ansible-scripts/OpenFaaS-Edge-Cluster/: .ansible 2.cfg.icloud  .hosts 2.yaml.icloud  .master 2.yml.icloud  .master-after-join 2.yml.icloud  .minion 2.yml.icloud  .test 2.yml.icloud  ansible.cfg  hosts-with-ubuntuvm-master.yml  hosts.yaml  master-after-join.yml  master.yml  minion.yml  run_scratch.sh  test.yml
esp32-measurement-node/: README.md
esp32-measurement-node/components/power_measurement/: CMakeLists.txt  Kconfig.projbuild  power_measurement.c
esp32-measurement-node/components/power_measurement/include/: power_measurement.h
esp32-measurement-node/main/: CMakeLists.txt
esp32-powermeter-udp-server/: README.md
esp32-powermeter-udp-server/main/: Kconfig.projbuild  main.c  udp_server.c
esp32_measurement_node/: CMakeLists.txt  README.md
openfaas-functions/: analyze_sent.yml
powermeasurement-udp-client/: Makefile  README.md  example.conf  udp_client.c
prometheus-exporter/: README.md  example  exporter  exporter.c  main.c
prometheus-power-exporter/: Makefile  README.md  exporter.c  exporter.py  metric_power_consumption.c  metric_power_consumption.h  power_metrics.c  power_metrics.h  power_metrics.py  powermeasurement.py  requirements.txt
protobuffers/: README.md
test-utils/: cpufreqinfo.sh  send_udp_msg.py
thesis/: bibliography.bib  main.tex  settings.tex
udp-client/: CMakeLists.txt  Makefile  README.md  udp_client.c  udp_client.h
udp-server/: README.md
(+224 files in other folders)
